Fix FunctionsSidebar z-index

--- a/src/scss/components/_functions-sidebar.scss
+++ b/src/scss/components/_functions-sidebar.scss
@@ -53,7 +53,8 @@
       clear: both;
       border-bottom: 2px solid $primary-color;
       background: $light-secondary-color;
-      position: static;
+      position: relative;
+      z-index: 70;
     }
   }
 }
